# module-6-vitooputraa

animal-zoo/: .env  pyproject.toml
animal-zoo/app/: __init__.py
animal-zoo/app/model/: Role.py  Schedule.py  Sex.py  Species.py
animal-zoo/app/model/baseModel/: AnimalModel.py  EmployeeModel.py
animal-zoo/app/schemas/: AnimalSchemas.py  EmployeeSchemas.py
animal-zoo/app/service/: MemberService.py
animal-zoo/app/service/dbService/: AnimalService.py  DbService.py  EmployeeService.py
animal-zoo/app/util/: SessionFlaskModel.py  SqlPhat.py  typeModel.py
animal-zoo/app/views/: createApp.py
animal-zoo/app/views/animal/: AnimalViews.py  AnimalsViews.py
animal-zoo/app/views/employee/: EmployeeViews.py  EmployeesViews.py
